client/src/editor/extensions/dragHandle.css
.tiptap {
	position: relative;
}

.drag-handle {
	position: fixed;
	display: none;
	width: 24px;
	height: 24px;
	align-items: center;
	justify-content: center;
	background-color: rgb(var(--backgroundSecondary));
	border: 1px solid rgb(var(--backgroundBorder));
	border-radius: 4px;
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
	color: rgba(var(--textPrimary) / 0.4);
	cursor: grab;
	z-index: 50;
	opacity: 1;
	transition: opacity 1s ease 1s;

	&:hover {
		background-color: rgba(var(--textPrimary) / 0.05);
		color: rgba(var(--primary) / 1);
		border-color: rgb(var(--primary));
	}

	&.dragging {
		cursor: grabbing;
		background-color: rgba(var(--primary) / 0.1);
		border-color: rgb(var(--primary));
	}

	&.fading {
		opacity: 0;
	}

	&::before {
		content: attr(data-depth);
		position: absolute;
		top: -13px;
		left: 50%;
		transform: translateX(-50%);
		font-size: 9px;
		line-height: 1;
		color: rgba(var(--textPrimary) / 0.4);
		pointer-events: none;
	}
}

